Error handler and swagger fixes
